[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "token_accessor"
version = "0.0.1"
authors = [
    { name = "Altis Labs, Inc.", email = "info@altislabs.com" }
]
description = "A library for accessing the Token Cache API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aws-requests-auth~=0.4.3",
    "boto3~=1.34.74",
    "gevent~=23.9.0",
    "gql[requests]~=3.5.3",
    "requests~=2.32.4",
    "pydantic~=1.10.6",
    "urllib3~=2.2.3",
]

[project.urls]
Homepage = "https://github.com/altis-labs/token_accessor"
Issues = "https://github.com/altis-labs/token_accessor/issues"

